--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     
-    <title>React App</title>
+    <title>Nikitoshas Ltd.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
